Ajustes en navbar móvil: botón de cierre, tamaños de fuente y espaciado

--- a/index.html
+++ b/index.html
@@ -60,12 +60,18 @@
                             <a class="nav-link" href="#contacto" data-i18n="nav.contact">Contacto</a>
                         </li>
                     </ul>
-                    <div class="language-switcher ms-auto">
-                        <button class="btn-language active" data-lang="es" id="btn-lang-es">
-                            <span>ES</span>
-                        </button>
-                        <button class="btn-language" data-lang="en" id="btn-lang-en">
-                            <span>EN</span>
+                    <div class="language-switcher-container">
+                        <div class="language-switcher ms-auto">
+                            <button class="btn-language active" data-lang="es" id="btn-lang-es">
+                                <span>ES</span>
+                            </button>
+                            <button class="btn-language" data-lang="en" id="btn-lang-en">
+                                <span>EN</span>
+                            </button>
+                        </div>
+                        <!-- Close button for mobile menu -->
+                        <button class="navbar-close-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Close navigation">
+                            <i class="bi bi-x-lg"></i>
                         </button>
                     </div>
                 </div>
