cambio de idiomas

--- a/index.html
+++ b/index.html
@@ -60,12 +60,22 @@
                             <a class="nav-link" href="#contacto" data-i18n="nav.contact">Contacto</a>
                         </li>
                     </ul>
+                    <!-- Language switcher for desktop -->
+                    <div class="language-switcher language-switcher-desktop ms-auto">
+                        <button class="btn-language active" data-lang="es" id="btn-lang-es">
+                            <span>ES</span>
+                        </button>
+                        <button class="btn-language" data-lang="en" id="btn-lang-en">
+                            <span>EN</span>
+                        </button>
+                    </div>
+                    <!-- Language switcher container for mobile (with close button) -->
                     <div class="language-switcher-container">
-                        <div class="language-switcher ms-auto">
-                            <button class="btn-language active" data-lang="es" id="btn-lang-es">
+                        <div class="language-switcher language-switcher-mobile ms-auto">
+                            <button class="btn-language active" data-lang="es" id="btn-lang-es-mobile">
                                 <span>ES</span>
                             </button>
-                            <button class="btn-language" data-lang="en" id="btn-lang-en">
+                            <button class="btn-language" data-lang="en" id="btn-lang-en-mobile">
                                 <span>EN</span>
                             </button>
                         </div>
