--- a/index.html
+++ b/index.html
@@ -278,6 +278,20 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-6 col-lg-4 portfolio-item">
+                    <div class="portfolio-card">
+                        <div class="portfolio-image" data-video-thumbnail="5">
+                            <div class="portfolio-category">
+                                <i class="bi bi-lightning-charge"></i>
+                                <span data-i18n="portfolio.category.professional">Estilo Profesional</span>
+                            </div>
+                            <div class="portfolio-overlay">
+                                <i class="bi bi-play-circle"></i>
+                                <p data-i18n="portfolio.watchVideo">Ver Video</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 </div>
             </div>
             
@@ -528,7 +542,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body" style="padding: 0;">
-                    <div class="ratio ratio-16x9" id="videoContainer" style="background: #000;">
+                    <div class="ratio ratio-16x9" id="videoContainer" style="background: #000; margin: 0; padding: 0;">
                         <iframe 
                             id="videoFrame" 
                             src="" 
@@ -536,7 +550,7 @@
                             allowfullscreen
                             referrerpolicy="strict-origin-when-cross-origin"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share; fullscreen"
-                            style="border: none; width: 100%; height: 100%; display: block;"
+                            style="border: none; width: 100%; height: 100%; display: block; margin: 0; padding: 0;"
                             title="YouTube video player">
                         </iframe>
                     </div>
