--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero-section">
+        <video class="hero-background-video" autoplay muted loop playsinline>
+            <source src="img/portada/portada.mp4" type="video/mp4">
+        </video>
         <div class="hero-overlay"></div>
         <div class="container">
             <div class="row align-items-center min-vh-100">
@@ -101,14 +104,6 @@
                         <div class="hero-buttons fade-in-delay-2">
                             <a href="#clientes" class="btn btn-primary-custom" data-i18n="hero.btnPortfolio">Ver Portafolio</a>
                             <a href="#contacto" class="btn btn-outline-custom" data-i18n="hero.btnContact">Contactar</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="hero-video-container fade-in-delay-1">
-                        <div class="video-placeholder">
-                            <i class="bi bi-play-circle-fill"></i>
-                            <p data-i18n="hero.featuredVideo">Video Destacado</p>
                         </div>
                     </div>
                 </div>
