cambios en reels

--- a/index.html
+++ b/index.html
@@ -405,7 +405,8 @@
                                 <div class="portfolio-image portfolio-image-reel" data-reel-video="0">
                                     <video class="reel-preview-video" muted loop playsinline autoplay
                                         preload="metadata">
-                                        <source src="img/tiktok/vala 2.mp4" type="video/mp4">
+                                        <source src="https://dvvbbrat3tqct.cloudfront.net/videos/alemizzle.mp4" type="video/mp4">
+                                        
                                     </video>
                                     <div class="portfolio-overlay">
                                         <i class="bi bi-play-circle"></i>
@@ -419,7 +420,7 @@
                                 <div class="portfolio-image portfolio-image-reel" data-reel-video="1">
                                     <video class="reel-preview-video" muted loop playsinline autoplay
                                         preload="metadata">
-                                        <source src="img/tiktok/evelin.mp4" type="video/mp4">
+                                        <source src="https://dvvbbrat3tqct.cloudfront.net/videos/evelin.mp4" type="video/mp4">
                                     </video>
                                     <div class="portfolio-overlay">
                                         <i class="bi bi-play-circle"></i>
@@ -433,7 +434,7 @@
                                 <div class="portfolio-image portfolio-image-reel" data-reel-video="2">
                                     <video class="reel-preview-video" muted loop playsinline autoplay
                                         preload="metadata">
-                                        <source src="img/tiktok/elita.mp4" type="video/mp4">
+                                        <source src="https://dvvbbrat3tqct.cloudfront.net/videos/elita.mp4" type="video/mp4">
                                     </video>
                                     <div class="portfolio-overlay">
                                         <i class="bi bi-play-circle"></i>
@@ -447,7 +448,7 @@
                                 <div class="portfolio-image portfolio-image-reel" data-reel-video="3">
                                     <video class="reel-preview-video" muted loop playsinline autoplay
                                         preload="metadata">
-                                        <source src="img/tiktok/cumbi.mp4" type="video/mp4">
+                                        <source src="https://dvvbbrat3tqct.cloudfront.net/videos/cumbi.mp4" type="video/mp4">
                                     </video>
                                     <div class="portfolio-overlay">
                                         <i class="bi bi-play-circle"></i>
@@ -461,7 +462,7 @@
                                 <div class="portfolio-image portfolio-image-reel" data-reel-video="4">
                                     <video class="reel-preview-video" muted loop playsinline autoplay
                                         preload="metadata">
-                                        <source src="img/tiktok/andylive.mp4" type="video/mp4">
+                                        <source src="https://dvvbbrat3tqct.cloudfront.net/videos/andylive.mp4" type="video/mp4">
                                     </video>
                                     <div class="portfolio-overlay">
                                         <i class="bi bi-play-circle"></i>
@@ -475,7 +476,7 @@
                                 <div class="portfolio-image portfolio-image-reel" data-reel-video="5">
                                     <video class="reel-preview-video" muted loop playsinline autoplay
                                         preload="metadata">
-                                        <source src="img/tiktok/alemizzle.mp4" type="video/mp4">
+                                        <source src="https://dvvbbrat3tqct.cloudfront.net/videos/alemizzle.mp4" type="video/mp4">
                                     </video>
                                     <div class="portfolio-overlay">
                                         <i class="bi bi-play-circle"></i>
